--- a/flipcart_clone/package.json
+++ b/flipcart_clone/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^3.0.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
